<resources>
    <string name="app_name" translatable="false">Delhi Metro Route</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="search">SEARCH</string>
    <string name="title_activity_scrolling">Journey Details</string>

    <string name="action_settings">Settings</string>
    <string name="bhopal_to_bilaspur">bhopal to bilaspur</string>
    <string name="km">km</string>
    <string name="title_activity_sscroll">SScrollActivity</string>
    <string name="linechange">Line\nChange</string>
    <string name="_3">3</string>
    <string name="rs_300">RS 300</string>
    <string name="redLine">Red Line</string>
    <string name="greenLine">Green Line</string>
    <string name="yellowLine">Yellow Line</string>
    <string name="blueLine">Blue Line</string>
    <string name="bioletLine">Violet Line</string>
    <string name="lbLine">Light Blue Line</string>
    <string name="orangeLine">Orange Line</string>
    <string name="change_to">Change towards</string>

    <string name="new_notification_title_template">New: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor
        sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper
        venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque
        vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis
        ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet
        nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
</resources>
