<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".showRoute.ShowRouteDetails">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="170sp"
                android:layout_margin="2dp"
                android:background="@drawable/shape01">

                <LinearLayout
                    android:id="@+id/routeDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="40sp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.03">

                    <TextView
                        android:id="@+id/from"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxEms="15"
                        android:textColor="@color/Black"
                        android:textSize="12sp"
                        android:textStyle="italic" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:src="@drawable/ic_trending_flat_black_36dp" />

                    <TextView
                        android:id="@+id/to"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxEms="15"
                        android:textColor="@color/Black"
                        android:textSize="12sp"
                        android:textStyle="italic" />
                </LinearLayout>

                <android.support.v7.widget.CardView

                    android:layout_width="@dimen/card_width"
                    android:layout_height="60sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.05"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.3500000">

                    <ImageView
                        android:layout_width="40sp"
                        android:layout_height="40sp"
                        android:layout_gravity="center_vertical|start"
                        android:layout_marginEnd="10sp"
                        android:src="@drawable/rupee" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">


                        <TextView
                            android:id="@+id/fare"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="RS 300"
                            android:textColor="@color/Black"
                            android:textSize="20sp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView

                    android:layout_width="@dimen/card_width"
                    android:layout_height="60sp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.05"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.92">
                    <ImageView
                        android:layout_width="40sp"
                        android:layout_height="40sp"
                        android:layout_gravity="center_vertical|start"
                        android:src="@drawable/ic_timeline_black_36dp" />
                    <TextView
                        android:id="@+id/distance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="1dp"
                        android:text="RS 300"
                        android:textColor="@color/Black"
                        android:textSize="20sp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="end"
                        android:layout_marginEnd="15sp"
                        android:orientation="horizontal">




                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="10sp"
                            android:text="@string/km"
                            android:textColor="@color/Black"
                            android:textSize="15sp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView

                    android:layout_width="@dimen/card_width"
                    android:layout_height="60sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.95"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.3500000">

                    <ImageView
                        android:id="@+id/image001"
                        android:layout_width="40sp"
                        android:layout_height="40sp"
                        android:layout_gravity="center_vertical|start"
                        android:src="@drawable/ic_update_black_36dp" />

                    <TextView
                        android:id="@+id/runtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="88"
                        android:textColor="@color/Black"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:layout_marginEnd="15sp"
                        android:gravity="center"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|end"
                            android:layout_marginStart="15dp"
                            android:text="Mins"
                            android:textColor="@color/primaryTextColor" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView

                    android:layout_width="@dimen/card_width"
                    android:layout_height="60sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.95"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.92">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="40sp"
                            android:layout_height="40sp"
                            android:layout_gravity="center_vertical|start"
                            android:src="@drawable/ic_call_split_black_36dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.48000002" />

                        <TextView
                            android:id="@+id/lineChange"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"

                            android:text="@string/_3"
                            android:textColor="@color/Black"
                            android:textSize="25sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/linechange"
                            android:textColor="@color/secondaryTextColor"
                            android:textSize="12sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.87"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </android.support.constraint.ConstraintLayout>
                </android.support.v7.widget.CardView>

            </android.support.constraint.ConstraintLayout>


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <include
        android:id="@+id/nestedScrollView"
        layout="@layout/content_scrolling" />


</android.support.design.widget.CoordinatorLayout>
